# challenge_deep_learning

./: .gitignore  README.md  build_channel_map.py  channel_log_score.py  channel_score.json  channel_to_idx_old.json  channel_view_score.py  compare_sub.py  create_submission.py  create_submission_by_class.py  freeze_thaw_train.py  load_gpt_model.py  output.txt  pyproject.toml  requirements.txt  sample_submission.csv  submission (1).csv  submission18.csv  temp.py  train.py  train_by_class.py  train_class.py  train_old.py  validate.py
configs/: confusion.yaml  preprocess.yaml  submission.yaml  submission_by_class.yaml  train.yaml  train_by_class.yaml  train_class.yaml  train_thaw.yaml  validate.yaml
confusion/: confusion.ipynb  confusion_matrix.py  create_splits.py  fixed_train.py  mec.py  mec_class.py
data/: clean.py  data_augment.ipynb  data_prep.py  dataaugment.py  datamodule.py  dataset.py  dataset_old.py  linked_matrix.npy  model_performances.ipynb  random_per_id.py  test.npy  transformed_centroids.pt
gpt_tools/: augmentation_preprocess.py  preprocess.py
models/: ResNet_distilbert_lora.py  blip2.py  blip2_unfrozen.py  dinov2.py  dinov2_distilbert_lora.py  img12_distilbert_attention_lora.py  img12_distilbert_lora.py  import kagglehub.py  lora.py  siglip.py  siglip_and_full_mlp.py  siglip_and_projections.py  siglip_distilbert_attention_lora.py  siglip_distilbert_lora.py  siglip_distilbert_lora_class.py  siglip_distilbert_lora_thaw.py  siglip_gemma_attention_lora.py  siglip_gemma_attention_lora_log.py  siglip_old.py  siglip_unfrozen.py
utils/: loss_fn.py  (+2 more)
(+23 files in other folders)
